Localisation and Bug Fixes

--- a/localisation/english/sgm_mrfreake_batch_l_english.yml
+++ b/localisation/english/sgm_mrfreake_batch_l_english.yml
@@ -14,6 +14,14 @@ delete_megastructure_confirmation_desc: "Deleting this megastructure will not sp
 clear_deposit_confirmation_desc: "Performing this action will clear all deposits from this planet. Performing this action on an inhabited planet is not recommended.\n\nAre you sure you want to clear deposits on [from.GetName]?"
 destroy_colony_confirmation_desc: "Are you sure you want to destroy the colony on [from.GetName], owned by [from.owner.GetName]?"
 set_planet_owner_confirmation_desc: "Are you sure you want to set [target_country.GetName] owner of [from.GetName]?"
+crack_planet_confirmation:0 "Crack Planet Confirmation"
+delete_megastructure_confirmation:0 "Delete Megastructure Confirmation"
+destroy_megastructure_confirmation:0 "Destroy Megastructure Confirmation"
+clear_deposit_confirmation:0 "Clear Deposit Confirmation"
+set_planet_owner_confirmation:0 "Set Planet Owner Confirmation"
+destroy_galaxy_confirmation:0 "Destroy Galaxy Confirmation"
+destroy_galaxy_confirmation_desc:0 "Are you sure you want to destroy the galaxy?\n\n§RThis will kill all countries in the galaxy besides the GM."
+destroy_colony_confirmation:0 "Destroy Colony Confirmation"
 
 # events
 sgm_country_1_desc: "Perform event actions on [from.GetName]."
@@ -30,6 +38,10 @@ sgm_country_8: "Modify [from.GetName]'s Main Species"
 sgm_country_8_desc: "Choose traits to add to [from.owner_main_species.GetName]. You may add as many traits as you like here."
 sgm_diplomanagement_1: "Diplomacy Management"
 sgm_diplomanagement_1_desc: "Here you can restrict empire's diplomatic options, in years.\n\nEvery time a diplomatic restriction is set it overwrites the previous restriction. However, it is possible to add different length restrictions for players and AI."
+sgm_subjugation_blocked: "Subjugation: §RBlocked"
+WARS_NOT_ALLOWED: "Wars: §RBlocked"
+sgm_federations_blocked: "Federations: §RBlocked"
+sgm_join_galcom_blocked: "Form Galactic Community: §RBlocked"
 sgm_event_chains_1_title: "Create Special Project"
 sgm_event_chains_1_desc: "Begin Special Project on [from.GetName] for [fromfrom.GetName]."
 sgm_fleet_1_desc: "Perform event actions on [from.GetName], owned by [from.owner.GetName]."
@@ -51,7 +63,10 @@ remove_mod_planet_modifier: "Remove GM Planet Modifier"
 create_point_of_interest: "Create Point of Interest"
 remove_point_of_interest: "Remove Point of Interest"
 spawn_ww2_sol_III: "Spawn WW2 SOL III"
-
+ sgm_manage_game_1:0 "Manage Game"
+ sgm_manage_game_1_desc:0 "Change Game Settings"
+ manage_bounty:0 "Manage Bounties"
+ manage_diplomacy:0 "Manage Diplomacy"
 
 DELETE_FLEET: "Delete Fleet"
 change_ownership_to_target_country: "Set owner: [target_country.GetName]"
@@ -65,6 +80,50 @@ set_target_country_as_player: "[target_country.GetName] plays as [from.owner.Get
 Exit: "Exit"
 Next: "Next"
 Previous: "Previous"
+
+ sgm_country_1_title:0 "Perform Event Actions"
+ sgm_country_2_title:0 "Declare War Options"
+ click_to_change:0 "Click to Change"
+ sgm_country_3:0 "Shift Country Ethics"
+ sgm_country_4:0 "Change Country Civics"
+ menace_desc:0 "Menace"
+ trait_harvested_radiotrophic:0 "Harvested Radiotrophic"
+ trait_aquatic:0 "Aquatic"
+ sgm_country_9:0 "Change AI Personality"
+ sgm_country_9_desc:0 "Choose AI personality:"
+ honorbound_warriors:0 "Honorbound Warriors"
+ evangelising_zealots:0 "Evangelising Zealots"
+ erudite_explorers:0 "Erudite Explorers"
+ spiritual_seekers:0 "Spiritual Seekers"
+ ruthless_capitalists:0 "Ruthless Capitalists"
+ peaceful_traders:0 "Peaceful Traders"
+ hegemonic_imperialists:0 "Hegemonic Imperialists"
+ slaving_despots:0 "Slaving Despots"
+ decadent_hierarchy:0 "Decadent Hierarchy"
+ democratic_crusaders:0 "Democratic Crusaders"
+ harmonious_hierarchy:0 "Harmonious Hierarchy"
+ federation_builders:0 "Federation Builders"
+ xenophobic_isolationists:0 "Xenophobic Isolationists"
+ fanatic_purifiers:0 "Fanatic Purifiers"
+ devouring_swarm:0 "Devouring Swarm"
+ migrating_flock:0 "Migrating Flock"
+ metalhead:0 "Metalhead"
+ assimilators:0 "Assimilators"
+ exterminators:0 "Exterminators"
+ servitors:0 "Servitors"
+ fanatic_befrienders:0 "Fanatic Befrienders"
+ became_the_crisis:0 "Became The Crisis"
+ fallen_empire_spiritualist:0 "Fallen Empire Spiritualist"
+ fallen_empire_materialist:0 "Fallen Empire Materialist"
+ fallen_empire_xenophobe:0 "Fallen Empire Xenophobe"
+ fallen_empire_xenophile:0 "Fallen Empire Xenophile"
+ awakened_fallen_empire_spiritualist:0 "Awakened Fallen Empire Spiritualist"
+ awakened_fallen_empire_materialist:0 "Awakened Fallen Empire Materialist"
+ awakened_fallen_empire_xenophobe:0 "Awakened Fallen Empire Xenophobe"
+ awakened_fallen_empire_xenophile:0 "Awakened Fallen Empire Xenophile"
+ fallen_empire_machine:0 "Fallen Empire Machine"
+ awakened_fallen_empire_machine:0 "Awakened Fallen Empire Machine"
+ berserk_fallen_empire_machine:0 "Berserk Fallen Empire Machine"
 
 
 # hostile fleets
@@ -96,6 +155,13 @@ spawn_unbidden: "Spawn Unbidden"
 spawn_contingency: "Spawn Contingency"
 awaken_fallen_empire: "Awaken Fallen Empire"
 trigger_war_in_heaven: "Begin War in Heaven"
+sgm_galactic_events_title: "Start a Galactic Event"
+start_space_storm: "Spawn a Space Storm"
+destroy_galaxy: "§RDestory Galaxy"
+increase_end_of_cycle_odds: "Increase End of Cycle Odds"
+begin_end_of_cycle: "Begin End of Cycle"
+end_the_cycle: "Stop End of Cycle"
+spawn_star_cluster: "Spawn Extragalactic Star"
 
 
 
@@ -392,6 +458,13 @@ sgm_remove_all_hyperlanes: "Remove All Hyperlanes"
 sgm_add_wormhole: "Add Wormhole"
 sgm_add_l_gate: "Add L-Gate"
 sgm_spawn_system: "Spawn System"
+sgm_system_4: "Spawn Extragalactic Cluster"
+sgm_system_4_desc: "Here you can spawn a cluster outside of the galactic rim. Specify how many stars and whether they are connected via hyperlane.\n\n§RSetting a large number of stars may cause lag, desyncs or other instability in multiplayer."
+spawning_empty_cluster: "Spawn Empty Cluster"
+spawn_chosen_cluster: "Spawn Chosen Cluster"
+spawn_prescripted_cluster: "Spawn Prescripted Cluster"
+no_hyperlane_connections: "No Hyperlanes in cluster"
+add_hyperlane_connections: "Add Hyperlanes to cluster"
 creating_army: "Creating Army"
 creating_army_transport: "Creating Army Transport"
 spawn_armies: "Spawn Armies"
@@ -498,6 +571,108 @@ final_roll_result: "Final Roll: [fromfrom.roll_result]"
 sgm_notify_1_desc: "[fromfrom.GetName] rolled for [from.GetName].\n\nFinal Roll: [fromfrom.roll_result]"
 rolls_disallowed: "Player Rolling: §RBlocked"
 rolls_allowed: "Player Rolling: §GAllowed"
+
+# cheats menu
+sgm_cheats_1_desc: "Add Cheat Effect to Target Country, entire Federation or all Empires."
+applying_to_target_country: "Apply to: Target Country"
+applying_to_target_federation: "Apply to: Target Country's Federation"
+applying_to_all_countries: "Apply to: All Countries"
+apply_infinite_resource_effect: "§GGive Infinite Resources"
+remove_infinite_resource_effect: "§RRemove Infinfite Resources"
+sgm_cheats_1:0 "Cheat Menu"
+add_instant_build_effect:0 "§GGive Instant Build"
+remove_instant_build_effect:0 "§RRemove Instant Build"
+add_instant_research_effect:0 "§GAdd Instant Research"
+remove_instant_research_effect:0 "§RRemove Instant Research"
+survey_systems_effect:0 "§GGive Survey of all systems §R(permanent)"
+give_all_technology:0 "§GGive All Technology §R(permanent)"
+establish_all_communications:0 "§GGive All Communications §R(permanent)"
+make_advanced_empire:0 "§BMake Advanced Empire §R(permanent)"
+
+# gm notifications
+
+ sgm_notify_1:0 "Roll Result"
+ sgm_notify_2:0 "Roll Result"
+ sgm_notify_50:0 "Set GM Notification"
+ sgm_notify_50_desc:0 "Set a notification for when [from.GetName] is:"
+ on_colonized:0 "Colonized"
+ on_ground_combat_started:0 "Has Ground Combat"
+ on_surveyed:0 "Surveyed"
+ on_orbital_construction:0 "Has Orbital Construction"
+ on_pop_purged:0 "Has a pop purged"
+ on_terraforming_begin:0 "Begins Terraforming"
+ on_planet_bombarded:0 "Orbitally Bombarded"
+ on_planet_occupied:0 "Occupied in War"
+ on_planet_new_owner:0 "Gets a New Owner"
+ on_planet_branch_office:0 "Has a Branch Office"
+ on_planet_conquered:0 "Conquered in War"
+ on_planet_uplift:0 "Has a Species Uplifted"
+ on_planet_attackers_win:0 "Attackers Win Ground Combat"
+ on_planet_defenders_win:0 "Defenders Win Ground Combat"
+ on_entering_war:0 "Enters a War"
+ on_post_communications_established:0 "Establishes Communications"
+ on_modification_complete:0 "Modifies a Species"
+ on_federation_new_leader:0 "Federation Gets a New Leader"
+ on_pirate_spawn:0 "Has Pirates Spawn"
+ on_system_lost:0 "Loses a System"
+ on_system_gained:0 "Gains a System"
+ on_relic_activated:0 "Activcates a Relic"
+ on_post_government_changed:0 "Changes their Government"
+ on_ascension_perk_picked:0 "Picks an Asecension Perk"
+ on_megastructure_built:0 "Builds a Megastructure"
+ on_entering_gateway:0 "Enters a Gateway"
+ on_entering_wormhole:0 "Enters a Wormhole"
+ on_jump_drive:0 "Uses Jump Drive"
+ on_arch_stage_finished:0 "Finishes Dig Site"
+ on_crossing_border:0 "Crosses an Empires borders"
+ on_entering_system_fleet:0 "Enters a System"
+ on_emergency_ftl:0 "Uses Emergency FTL"
+ on_system_survey:0 "Surveys a System"
+ on_entering_battle:0 "Enters Battle"
+ on_starbase_destroyed:0 "Destroys a Starbase"
+ on_space_battle_won:0 "Wins a Space Battle"
+ sgm_notify_101:0 "GM Notification Triggered"
+ gm_notification_colonized:0 "[from.GetName] was just colonized!"
+ gm_notification_groundcombat:0 "[from.GetName] is under ground attack!"
+ gm_notification_surveyed:0 "[from.GetName] was surveyed!"
+ gm_notification_pop_purged:0 "[from.GetName] had a pop purged!"
+ gm_notification_terraforming_begin:0 "[from.GetName] just began terraforming!"
+ gm_notification_planet_bombarded:0 "[from.GetName] is currently being bombarded!"
+ gm_notification_planet_occupied:0 "[from.GetName] just became occupied!"
+ gm_notification_planet_new_owner:0 "[from.GetName] has a new owner."
+ gm_notification_branch_office:0 "[from.GetName] has a brand new Branch Office!"
+ gm_notification_planet_conquered:0 "[from.GetName] was just aggressively conquered!"
+ gm_notification_planet_uplift:0 "[from.GetName] just had a species of primitives uplifted!"
+ remove_notification:0 "§RRemove All Notifications from [from.GetName]"
+ sgm_notify_201:0 "GM Triggered Notification"
+ notification_attackers_win:0 "[from.GetName] was just conquered by ground combat!"
+ notification_defenders_win:0 "[from.GetName] was just valiantly defended!"
+ notification_entering_war:0 "[from.GetName] just entered a war!"
+ gm_notification_attackers_win:0 "[from.GetName] was just aggressively conquered!"
+ notification_modification_complete:0 "[from.GetName] just completed a species modification!"
+ notification_federation_new_leader:0 "[from.GetName]'s Federation just got a new leader!"
+ notification_pirate_spawn:0 "[from.GetName] just had pirates spawn!"
+ notification_system_lost:0 "[from.GetName] just lost ownership of a system!"
+ notification_system_gained:0 "[from.GetName] just gained ownership of a system!"
+ notification_relic_activated:0 "[from.GetName] just activated a relic!"
+ notification_government_changed:0 "[from.GetName] just changed their government!"
+ notification_ascension_perk_picked:0 "[from.GetName] just picked an Ascension Perk!"
+ notification_entering_gateway:0 "[from.GetName] just used a gateway!"
+ notification_entering_wormhole:0 "[from.GetName] just entered a wormhole!"
+ notification_jump_drive:0 "[from.GetName] just used its Jump Drive!"
+ notification_arch_stage_finished:0 "[from.GetName] just finished a dig site stage!"
+ notification_crossing_border:0 "[from.GetName] just crossed an empire's borders!"
+ notification_entering_system_fleet:0 "[from.GetName] just entered a new system!"
+ notification_emergency_ftl:0 "[from.GetName] just used emergency FTL!"
+ notification_system_survey:0 "[from.GetName] just surveyed a system!"
+ notification_entering_battle:0 "[from.GetName] just entered battle!"
+ notification_starbase_destroyed:0 "[from.GetName] just destroyed a starbase!"
+ notification_space_battle_won:0 "[from.GetName] just won a space battle!"
+ notification_fleet_enter_orbit:0 "[from.GetName] just had a fleet enter orbit."
+ notification_megastructure_upgraded:0 "[from.GetName] just upgraded!"
+ notification_megastructure_change_owner:0 "[from.GetName]'s ownership just changed!"
+
+
 
 #special projects
 
